src/objects/Procedencia__c.object
<CustomObject>
    <description>Representa cada una de las procedencias de una Compañía/Cliente B2B.</description>
    <fields>
        <fullName>PROC_CAS_No_Requiere_Albaran__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si está marcado indica que no se requiere que haya albarán en el cierre de una Orden de Trabajo.</description>
        <label>Cierre Servicio No Requiere Albarán</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROC_CAS_Requiere_Declaracion_Resp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica que se requiere que el profesional presente un documento de Declaración de Responsable antes de iniciar los trabajos.</description>
        <label>Requiere Declaración Responsable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROC_CAS_Requiere_Informe_Cierre_Cita__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si es requerido generar un informe para poder completar una Cita de Servicio.</description>
        <label>Cierre Visita Requiere Parte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROC_CAS_Requiere_Pago_Minuta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica que es necesario informar en la intervención el importe de minuta al perito.</description>
        <label>Requiere Pago Minuta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROC_LKP_Cuenta__c</fullName>
        <description>Identificador único de la compañia</description>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Procedencias</relationshipLabel>
        <relationshipName>Procedencias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PROC_NUM_Contador_Rechazos__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo utilizado para contabilizar el número de siniestros con tipo de actuación rechazo que lleva la Compañía Aseguradora</description>
        <label>Contador Rechazos</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROC_NUM_Contador__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contador secuencial de Siniestros y Cuentas</description>
        <label>Contador Siniestros</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROC_NUM_Numero_Fotos_Requeridas__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de fotos requeridas en el cierre del Servicio.</description>
        <label>Cierre Servicio Nº de fotos requeridas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROC_NUM_Tiempo_Atencion_Urgencias__c</fullName>
        <description>Tiempo en horas establecido por la Compañía para atender Urgencias.</description>
        <label>Tiempo de atención de urgencias (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROC_SEL_Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Canales_Procedencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Gremios_Disp__c</fullName>
        <description>Listado de gremios disponibles para cada CIA</description>
        <label>Gremios Disponibles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Motivos_Anulacion__c</fullName>
        <label>Motivos de Anulación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivos_Anulacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Motivos_rechazo_presupuesto__c</fullName>
        <label>Motivos rechazo presupuesto</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Motivo_rechazo_presupuesto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Preferencia_Comunicacion__c</fullName>
        <description>Lista de selección para indicar por qué medio quiere la Compañía que se contacte a sus contactos</description>
        <label>Preferencia de Comunicación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Preferencia_Comunicacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Subcanal__c</fullName>
        <label>Subcanal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Subcanales_Procedencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Tipo_Actuacion__c</fullName>
        <label>Tipo de Actuación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Siniestro</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Tipologia_Servicio__c</fullName>
        <label>Tipología de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>SINIESTROS</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>ASISTENCIAS</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>REAL ESTATE</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>MEDIAMARKT</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>MB REPARACIONES</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>MANITAS</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>LDA SINIESTROS</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>MB SINIESTROS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_SEL_Tipos_Caso__c</fullName>
        <label>Tipos de Registro de Intervención</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_Caso_Procedencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROC_TXT_Descripcion__c</fullName>
        <description>Descripción de la procedencia</description>
        <label>Descripción</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROC_TXT_Identificador__c</fullName>
        <description>Identificador único (External ID) del Código de Procedencia</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Procedencia</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PROC_LKP_Cuenta__c</columns>
        <columns>PROC_SEL_Tipos_Caso__c</columns>
        <columns>PROC_SEL_Tipo_Actuacion__c</columns>
        <columns>PROC_NUM_Contador__c</columns>
        <columns>PROC_NUM_Contador_Rechazos__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Código de Procedencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(PROC_TXT_Identificador__c ))),ISCHANGED(PROC_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>true</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(PROC_TXT_Identificador__c),ISNULL( PROC_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>PROC_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>